# router-contract

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: auth.rs  lib.rs  storage.rs
src/adapters/: adapter.rs  aqua_constant.rs  aqua_stable.rs  comet.rs  mod.rs  phoenix.rs  soroswap.rs
src/extensions/: auth_helper.rs  env_extensions.rs  mod.rs
src/tests/: malicious_tests.rs  mock_aqua_pool_contract.rs  mock_malicious_lp_contract.rs  mock_soroswap_pair_contract.rs  mod.rs  soroswap_adapter_tests.rs  strict_send_tests.rs  swap_test_context.rs  test.rs
src/types/: error.rs  mod.rs  protocol.rs  route.rs  step.rs  swapinfo.rs
